# GameOfLife

./: .gitignore  CMakeLists.txt
include/: Application.hpp
include/engine/: Defaults.hpp
include/engine/graphics/memory/: VAO.hpp
include/engine/graphics/models/: Box.hpp  Grid.hpp  Square.hpp
include/engine/graphics/objects/: Instance.hpp  Mesh.hpp  Model.hpp
include/engine/graphics/rendering/: Shader.hpp  Texture.hpp
include/engine/io/: Camera.hpp  Keyboard.hpp  Mouse.hpp
include/engine/macros/: defaultMacros.hpp  fileMacros.hpp
include/engine/scene/: ApplicationWindow.hpp  Environment.hpp
shaders/: default.vert  grid.frag  grid.vert
src/: Application.cpp  main.cpp
src/engine/graphics/objects/: Mesh.cpp  Model.cpp
src/engine/graphics/rendering/: Shader.cpp  Texture.cpp
src/engine/io/: Camera.cpp  Keyboard.cpp  Mouse.cpp
src/engine/scene/: ApplicationWindow.cpp  Environment.cpp
